--- a/sauce.html
+++ b/sauce.html
@@ -258,55 +258,55 @@
     }
 
     /* Mobile Styles */
-   @media (max-width: 768px) {
-  /* Section 2 and 3 mobile fixes */
-  #section2, #section3 {
-    padding-top: 40px !important; /* Reduced from huge calc value */
-    min-height: auto !important;
-    height: auto !important;
-  }
-
+  @media (max-width: 768px) {
+  /* Widen the content containers */
   #section2 .recipe-content,
   #section3 .recipe-content {
-    width: 90% !important; /* Wider text area */
-    max-width: 100% !important;
-    margin: 0 auto;
-    padding: 20px;
+    width: 92% !important; /* Increased from 90% */
+    max-width: 640px !important; /* Added maximum width */
+    padding: 20px 4% !important; /* Adjusted side padding */
   }
 
+  /* Widen the recipe boxes */
+  .ingredients, 
+  .instructions {
+    width: 100% !important; /* Full width of container */
+    max-width: none !important;
+    padding: 20px 5% !important; /* More side padding */
+    box-sizing: border-box;
+  }
+
+  /* Widen the images */
   .recipe-image {
-    max-width: 100% !important;
     width: 100% !important;
-    margin: 20px auto !important;
+    max-width: 640px !important; /* Matches content width */
+    margin: 25px auto !important;
   }
 
-  /* Keep original h2 sizing */
+  /* Adjust heading sizes */
   h2 {
-    font-size: 2.5rem;
-    margin-top: 0 !important;
+    font-size: 2.8rem !important; /* Slightly larger */
+    margin: 0 auto 1.5rem !important;
+    width: 100%;
   }
 
-  /* Adjust content spacing */
-  .ingredients, .instructions {
-    max-width: 100% !important;
-    width: 100% !important;
+  h3 {
+    font-size: 2rem !important;
   }
 }
 
 @media (max-width: 480px) {
-  /* Further adjustments for small phones */
-  #section2, #section3 {
-    padding-top: 30px !important;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
+  /* Slightly wider on small phones */
   #section2 .recipe-content,
   #section3 .recipe-content {
-    width: 95% !important;
-    padding: 10px;
+    width: 94% !important;
+    padding: 15px 3% !important;
+  }
+
+  /* Larger text on small screens */
+  p {
+    font-size: 1.4rem !important;
+    line-height: 1.7;
   }
 }
   </style>
