--- a/sauce.html
+++ b/sauce.html
@@ -313,13 +313,14 @@
     margin: 10px 0 !important;
   }
   
-  #section1 .left-image {
-    top:20px;
-    transform: translateY(-40px) !important;
+ #section1 .left-image {
+    transform: translateY(-10px) !important; /* Adjusted from -40px */
+    margin-bottom: 20px !important;
   }
   
   #section1 .right-image {
-    transform: translateY(40px) !important;
+    transform: translateY(10px) !important; /* Adjusted from 40px */
+    margin-top: 20px !important;
   }
 }
   </style>
