--- a/sauce.html
+++ b/sauce.html
@@ -314,13 +314,14 @@
   }
   
  #section1 .left-image {
+   margin-top: 10px;
     transform: translateY(-10px) !important; /* Adjusted from -40px */
     margin-bottom: -30px !important;
   }
   
   #section1 .right-image {
     transform: translateY(10px) !important; /* Adjusted from 40px */
-    margin-top: -30px !important;
+    margin-top: -20px !important;
   }
 }
   </style>
