--- a/sauce.html
+++ b/sauce.html
@@ -312,7 +312,16 @@
   #section1 .recipe-content {
     margin: 10px 0 !important;
   }
-  
+   h1 {
+        font-size: 2.5rem;
+      }
+        #section2 {
+    min-height: 140vh; /* Even more on small screens */
+  }
+      h6 { 
+        font-size: .75rem;
+        line-height: 1.8;
+      }
  #section1 .left-image {
    margin-top: 50px;
     transform: translateY(-10px) !important; /* Adjusted from -40px */
