--- a/sauce.html
+++ b/sauce.html
@@ -322,6 +322,12 @@
         font-size: .75rem;
         line-height: 1.8;
       }
+
+   #section2 .recipe-content,
+  #section3 .recipe-content {
+    width: 92% !important;
+    max-width: 92% !important;
+  }
  #section1 .left-image {
    margin-top: 50px;
     transform: translateY(-10px) !important; /* Adjusted from -40px */
