--- a/sauce.html
+++ b/sauce.html
@@ -322,7 +322,15 @@
         font-size: .75rem;
         line-height: 1.8;
       }
-
+ .recipe-image {
+      max-width: 600px;
+      width: 100%;
+      height: auto;
+      margin: 30px auto;
+      display: block;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
   
  #section1 .left-image {
    margin-top: 50px;
