--- a/sauce.html
+++ b/sauce.html
@@ -261,16 +261,14 @@
  /* Mobile Styles */
 @media (max-width: 768px) {
   /* Match pizza page's section 2/3 width */
-  #section2, #section3 {
-    padding: 60px 20px !important; /* Same as pizza page */
+ #section2, #section3 {
+    padding: 60px 5% !important;
   }
   
   #section2 .recipe-content,
   #section3 .recipe-content {
-    width: 90% !important; /* Match pizza page width */
+    width: 90% !important;
     max-width: none !important;
-    padding: 0 !important;
-    margin: 0 auto !important;
   }
 
   /* Widen content boxes to match */
