--- a/sauce.html
+++ b/sauce.html
@@ -115,11 +115,17 @@
       margin-bottom: 1rem;
     }
     
-    h2 {
-      font-size: 3rem;
-      text-align: center;
-      margin: 2rem 0;
-    }
+ @font-face {
+  font-family: 'Sauce';  /* Give your font a name */
+  src: url('fonts/sauce.ttf') format('truetype'); /* Path to the font file */
+}
+
+h2 {
+  font-size: 3rem;
+  text-align: center;
+  margin: 2rem 0;
+  font-family: 'Sauce', sans-serif; /* Apply the font */
+}
     
     h6 {
       font-size: 1rem;
