--- a/sauce.html
+++ b/sauce.html
@@ -406,7 +406,7 @@ h2 {
   <!-- Third Section - Red Sauce -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2 class="redsauce-header">RED SAUCE</h2>
+      <h2 class="redsauce-header">MARINARA</h2>
       
       <div class="ingredients">
         <h3>Ingredients</h3>
