--- a/pizza.html
+++ b/pizza.html
@@ -107,10 +107,14 @@
       margin: 0.5rem 0 1.5rem;
       font-style: italic;
     }
-    
+    @font-face {
+  font-family: 'Sauce';  /* Give your font a name */
+  src: url('fonts/lostar.ttf') format('truetype'); /* Path to the font file */
+}
     h2 {
       font-size: 2.5rem;
       margin-bottom: 1.5rem;
+       font-family: 'Sauce', sans-serif; /* Apply the font */
     }
     
     p {
