--- a/meat.html
+++ b/meat.html
@@ -158,10 +158,14 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
     }
-    
+    @font-face {
+  font-family: 'Sauce';  /* Give your font a name */
+  src: url('fonts/meat.ttf') format('truetype'); /* Path to the font file */
+}
     h2 {
       font-size: 2.5rem;
       margin-bottom: 1.5rem;
+      font-family: 'Sauce', sans-serif; /* Apply the font */
     }
     
     h6 {
