--- a/meat.html
+++ b/meat.html
@@ -379,7 +379,7 @@
   <!-- Second Section - Meatballs -->
   <div class="section" id="section2">
     <div class="recipe-content">
-      <h2>Grandma's Meatballs</h2>
+      <h2>MEATBALLS</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
@@ -416,7 +416,7 @@
   <!-- Third Section - Cutlets -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2>Crispy Chicken Cutlets</h2>
+      <h2>CHICKEN CUTLET</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
