--- a/sauce.html
+++ b/sauce.html
@@ -26,7 +26,9 @@
 #section3 .recipe-content {
   opacity: 0;
   transform: translateY(20px);
-  transition: opacity 3s ease-out, transform 3s ease-out;
+  transition: 
+    opacity 2s ease-in-out, /* Slower fade (2 seconds) */
+    transform 0.6s ease-out; /* Faster movement (0.6 seconds) */
 }
 
 #section2 .recipe-content.fade-in,
