--- a/sauce.html
+++ b/sauce.html
@@ -34,7 +34,7 @@
 #section2 .recipe-content.fade-in,
 #section3 .recipe-content.fade-in {
   opacity: 1;
-  transform: translateY(0);
+  transform: translateY(40px);
 }
     .recipe-image {
       max-width: 640px;
