--- a/entrees.html
+++ b/entrees.html
@@ -23,7 +23,8 @@
     }
     /* Fade-in animation for Sections 2 & 3 */
 #section2 .recipe-content,
-#section3 .recipe-content {
+#section3 .recipe-content, 
+    #section4 .recipe-content{
   opacity: 0;
   transform: translateY(80px);
   transition: 
@@ -32,7 +33,8 @@
 }
 
 #section2 .recipe-content.fade-in,
-#section3 .recipe-content.fade-in {
+#section3 .recipe-content.fade-in,
+    #section4 .recipe-content{
   opacity: 1;
   transform: translateY(0);
 }
