--- a/sauce.html
+++ b/sauce.html
@@ -55,6 +55,7 @@
       font-size: 3.5rem;
       margin-bottom: 1rem;
       font-family: 'TheFont', sans-serif; /* Applied new font here */
+      color: #000000;
     }
     
     h2 {
@@ -390,7 +391,7 @@
     <div class="image-container">
       <img src="images2/pesto2.png" alt="Pesto Sauce" class="food-image left-image">
       <div class="recipe-content">
-        <h1>Sauces</h1>
+        <h1>SAUCES</h1>
         <h6>Two of my favorite sauces are Pesto and Marinara. Both are my fathers recipies and are staples in our house.</h6>
       </div>
       <img src="images2/RS.png" alt="Red Sauce" class="food-image right-image">
