--- a/sauce.html
+++ b/sauce.html
@@ -26,7 +26,7 @@
     /* Font Declarations */
     @font-face {
       font-family: 'TheFont';
-      src: url('fonts/the.otf') format('opentype');
+      src: url('fonts/font2.otf') format('opentype');
     }
     
     @font-face {
