--- a/sauce.html
+++ b/sauce.html
@@ -355,6 +355,14 @@
     }
 
     @media (max-width: 480px) {
+
+       h2 {
+      font-size: 4rem;
+      text-align: center;
+      margin: 2rem 0;
+      font-family: 'Sauce', sans-serif;
+    }
+      
       #section1 .food-image {
         max-width: 70% !important;
         max-height: 22vh !important;
