--- a/sauce.html
+++ b/sauce.html
@@ -358,8 +358,9 @@
 
        h2 {
       font-size: 4rem;
+         left:50px;
       text-align: center;
-     
+      margin: 2rem 0;
       font-family: 'Sauce', sans-serif;
     }
       
