--- a/index.html
+++ b/index.html
@@ -13,6 +13,43 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 
   <style>
+
+#section3 {
+    position: relative;
+    background-color: #d0cec7;
+    overflow: hidden;
+  }
+  
+  .table-background {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  
+  .table-background.loaded {
+    opacity: 1;
+  }
+  
+  #sketch-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+  }
+  
+  #sketch-container.hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    
     body {
       margin: 0;
       background-color: #f8f8f2;
