--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   #sketch-container.hidden {
     opacity: 0;
     visibility: hidden;
-    pointer-events: none;
+    pointer-events: none;}
     
     body {
       margin: 0;
