--- a/pizza.html
+++ b/pizza.html
@@ -11,6 +11,12 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 
   <style>
+
+      @font-face {
+  font-family: 'Seasons';
+  src: url('fonts/font2.otf') format('opentype');
+  font-weight: bold; /* Explicitly declare this as the bold variant */
+}
     /* Base Styles */
     body {
       background-color: #f9f5f0;
