--- a/meat.html
+++ b/meat.html
@@ -13,6 +13,11 @@
 
   
   <style>
+      @font-face {
+  font-family: 'Seasons';
+  src: url('fonts/font2.otf') format('opentype');
+  font-weight: bold; /* Explicitly declare this as the bold variant */
+}
     /* Base Styles */
     body {
       background-color: #f9f5f0;
