--- a/entrees.html
+++ b/entrees.html
@@ -12,7 +12,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 
   <style>
-    /* Base Styles */
+     @font-face {
+  font-family: 'Seasons';
+  src: url('fonts/font2.otf') format('opentype');
+  font-weight: bold; /* Explicitly declare this as the bold variant */
+}
     body {
       background-color: #f9f5f0;
       margin: 0;
@@ -194,6 +198,7 @@
     h1 {
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
+      font-family: 'Seasons'; 
     }
 @font-face {
   font-family: 'Sauce';  /* Give your font a name */
