--- a/entrees.html
+++ b/entrees.html
@@ -196,9 +196,14 @@
 
     /* Text Styles */
     h1 {
-      font-size: 3.5rem;
-      margin-bottom: 1.5rem;
-      font-family: 'Seasons'; 
+      font-size: 5rem;
+       font-weight: bold;
+      margin-bottom: 1rem;
+      font-family: 'Seasons', sans-serif; /* Applied new font here */
+      color: #000000;
+        -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
     }
 @font-face {
   font-family: 'Sauce';  /* Give your font a name */
