--- a/sauce.html
+++ b/sauce.html
@@ -55,6 +55,7 @@
         h1 {
       font-size: 3.5rem;
       margin-bottom: 1rem;
+          font-family: 'TheFont', sans-serif;
     }
     
     h2 {
