--- a/pizza.html
+++ b/pizza.html
@@ -331,7 +331,7 @@
     <div class="image-container">
       <img src="images2/pizza.png" alt="Delicious Pizza" class="food-image">
       <div class="recipe-content">
-        <h1>Pizza</h1>
+        <h1>PIZZA</h1>
         <h6>This recipe was created through about a month of making pizza's everyday, and finding what worked best. The recipe is simple, and it really comes down to to the quality of your ingedients.</h6>
       </div>
     </div>
