--- a/pizza.html
+++ b/pizza.html
@@ -123,6 +123,7 @@
       font-size: 3.5rem;
       margin-bottom: 1.5rem;
       font-family:'Seasons';
+      color:#000000;
     }
     
     h6 {
