--- a/meat.html
+++ b/meat.html
@@ -180,22 +180,18 @@
     }
 
     /* Text Styles */
-   h1 {
-      font-size: 5rem;
-       font-weight: bold;
-      margin-bottom: 1rem;
-      font-family: 'Seasons', sans-serif; /* Applied new font here */
-      color: #000000;
-        -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+    h1 {
+      font-size: 3.5rem;
+      margin-bottom: 1.5rem;
+      font-family:'Seasons';
+      color:#000000;
     }
     @font-face {
   font-family: 'Sauce';  /* Give your font a name */
   src: url('fonts/meat.ttf') format('truetype'); /* Path to the font file */
 }
     h2 {
-      font-size: 2.5rem;
+      font-size: 6rem;
       margin-bottom: 1.5rem;
       font-family: 'Sauce', sans-serif; /* Apply the font */
     }
