--- a/meat.html
+++ b/meat.html
@@ -407,7 +407,7 @@
   <!-- Second Section - Meatballs -->
   <div class="section" id="section2">
     <div class="recipe-content">
-      <h2> class="pesto-header" MEATBALLS</h2>
+      <h2 class="pesto-header" >MEATBALLS</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
@@ -444,7 +444,7 @@
   <!-- Third Section - Cutlets -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2> class="redsauce-header" CHICKEN CUTLET</h2>
+      <h2 class="redsauce-header" >CHICKEN CUTLET</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
