--- a/meat.html
+++ b/meat.html
@@ -18,6 +18,13 @@
   src: url('fonts/font2.otf') format('opentype');
   font-weight: bold; /* Explicitly declare this as the bold variant */
 }
+     .pesto-header {
+      color: #680a19;
+    }
+    
+    .redsauce-header {
+      color: #d62c2c;
+    }
     /* Base Styles */
     body {
       background-color: #f9f5f0;
