--- a/meat.html
+++ b/meat.html
@@ -19,11 +19,11 @@
   font-weight: bold; /* Explicitly declare this as the bold variant */
 }
      .pesto-header {
-      color: #680a19;
+      color: #251404;
     }
     
     .redsauce-header {
-      color: #d62c2c;
+      color: #8b4d16;
     }
     /* Base Styles */
     body {
