--- a/meat.html
+++ b/meat.html
@@ -195,7 +195,7 @@
     }
     @font-face {
   font-family: 'Sauce';  /* Give your font a name */
-  src: url('fonts/meat.ttf') format('truetype'); /* Path to the font file */
+  src: url('fonts/the.otf') format('truetype'); /* Path to the font file */
 }
     h2 {
       font-size: 6rem;
