--- a/meat.html
+++ b/meat.html
@@ -201,6 +201,14 @@
       font-size: 6rem;
       margin-bottom: 1.5rem;
       font-family: 'Sauce', sans-serif; /* Apply the font */
+   
+  font-weight: bold;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  letter-spacing: 0.5px;
+  line-height: 1.1;
+}
     }
     
     h6 {
