--- a/meat.html
+++ b/meat.html
@@ -200,7 +200,7 @@
     h2 {
       font-size: 6rem;
       margin-bottom: 1.5rem;
-      font-family: 'Sauce', sans-serif; /* Apply the font */
+      font-family: 'Seasons', sans-serif; /* Apply the font */
    
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
