--- a/entrees.html
+++ b/entrees.html
@@ -356,7 +356,7 @@
       </div>
     </div>
     <div class="recipe-content">
-      <h1>Entrees</h1>
+      <h1>ENTREES</h1>
       <h6>Here are some of my go to meals, mixing all of the meats and sauces that I have made.</h6>
     </div>
   </div>
@@ -364,7 +364,7 @@
   <!-- Pesto Pasta Section -->
   <div class="section" id="section2">
     <div class="recipe-content">
-      <h2>PESTO PASTA</h2>
+      <h2 class=pesto sauce>PESTO PASTA</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
