--- a/entrees.html
+++ b/entrees.html
@@ -364,7 +364,7 @@
   <!-- Pesto Pasta Section -->
   <div class="section" id="section2">
     <div class="recipe-content">
-      <h2 class=pesto sauce>PESTO PASTA</h2>
+      <h2  class="pesto-header">PESTO PASTA</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
@@ -393,7 +393,7 @@
   <!-- Meatball Marinara Section -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2>MEATBALL MARINARA</h2>
+      <h2 class="redsauce-header" >MEATBALL MARINARA</h2>
       
       <div class="recipe-card">
         <div class="ingredients">
