--- a/entrees.html
+++ b/entrees.html
@@ -110,10 +110,12 @@
     
     #section3 {
       background-color: #e0d9c1;
+       height:120vh;
     }
     
     #section4 {
       background-color: #d8d1b9;
+       height:120vh;
     }
 
     /* Slideshow Container */
