--- a/entrees.html
+++ b/entrees.html
@@ -331,7 +331,21 @@
       h1 {
         font-size: 1.8rem;
       }
-      
+       .section1 {
+        height: auto;
+        min-height: 100vh;
+        padding: 80px 20px 60px;
+      }
+       .section2 {
+        height: auto;
+        min-height: 100vh;
+        padding: 80px 20px 60px;
+      }
+       .section3 {
+        height: auto;
+        min-height: 100vh;
+        padding: 80px 20px 60px;
+      }
       .slideshow-container {
         height: 40vh;
       }
