--- a/entrees.html
+++ b/entrees.html
@@ -337,13 +337,12 @@
         padding: 80px 20px 60px;
       }
        .section2 {
-        height: auto;
-        min-height: 100vh;
+        height: 120vh;
+        
         padding: 80px 20px 60px;
       }
        .section3 {
-        height: auto;
-        min-height: 100vh;
+          height: 120vh;
         padding: 80px 20px 60px;
       }
       .slideshow-container {
