--- a/entrees.html
+++ b/entrees.html
@@ -300,9 +300,18 @@
 
     /* Mobile Styles */
     @media (max-width: 768px) {
-      .section {
+       .section1 {
         height: auto;
         min-height: 100vh;
+        padding: 80px 20px 60px;
+      }
+       .section2 {
+        height: 140vh;
+        
+        padding: 80px 20px 60px;
+      }
+       .section3 {
+          height: 120vh;
         padding: 80px 20px 60px;
       }
       
