--- a/entrees.html
+++ b/entrees.html
@@ -340,6 +340,9 @@
       h1 {
         font-size: 1.8rem;
       }
+        .section {
+      height: 130vh;
+          
        .section1 {
         height: auto;
         min-height: 100vh;
