--- a/entrees.html
+++ b/entrees.html
@@ -365,6 +365,14 @@
     .ingredients li, .instructions p {
         font-size: 1rem;
     }
+  .recipe-image {
+        max-width: 95%;
+    }
+    
+    .recipe-content {
+        max-width: 95%;
+        padding: 0 10px;
+    }
 }
   </style>
 </head>
