--- a/pizza.html
+++ b/pizza.html
@@ -17,6 +17,9 @@
   src: url('fonts/font2.otf') format('opentype');
   font-weight: bold; /* Explicitly declare this as the bold variant */
 }
+       .redsauce-header {
+      color: #d62c2c;
+    }
     /* Base Styles */
     body {
       background-color: #f9f5f0;
