--- a/pizza.html
+++ b/pizza.html
@@ -344,7 +344,7 @@
   <!-- Second Section with All Pizza Content -->
   <div class="section" id="section2">
     <div class="recipe-content">
-      <h2>MARGHERITA</h2>
+      <h2 class="redsauce-header" >MARGHERITA</h2>
       
       <div class="ingredients">
         <h3>Ingredients</h3>
