--- a/pizza.html
+++ b/pizza.html
@@ -144,7 +144,7 @@
 }
     h2 {
       font-size: 6rem;
-      margin-bottom: 1.5rem;
+      padding-bottom: 40px;
        font-family: 'Sauce', sans-serif; /* Apply the font */
     }
     
