--- a/pizza.html
+++ b/pizza.html
@@ -37,12 +37,14 @@
   transition: 
     opacity 2s ease-in-out,
     transform 0.6s ease-out;
+  margin-bottom: 20vh;
 }
 
 #section2 .recipe-content.fade-in,
 #section3 .recipe-content.fade-in {
   opacity: 1;
   transform: translateY(0);
+   margin-bottom: 20vh;
 }
 .recipe-image {
   max-width: 100%;
@@ -51,6 +53,7 @@
   display: block;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+   margin-bottom: 20vh;
 }
 
 @media (max-width: 768px) {
