--- a/pizza.html
+++ b/pizza.html
@@ -305,9 +305,18 @@
       h1 {
         font-size: 2.5rem;
       }
-        #section2 {
-    min-height: 140vh; /* Even more on small screens */
-  }
+        #section1 {
+      background-color: #f0e6d2;
+      position: sticky;
+      top: 0;
+    }
+    
+    #section2 {
+      background-color: #e8e0c9;
+     
+      height: 190vh;
+      padding: 60px 20px;
+    }
       h6 { 
         font-size: .75rem;
         line-height: 1.8;
