--- a/entrees.html
+++ b/entrees.html
@@ -223,13 +223,13 @@
   text-rendering: optimizeLegibility;
     }
 @font-face {
-  font-family: 'Sauce';  /* Give your font a name */
-  src: url('fonts/the.otf') format('truetype'); /* Path to the font file */
+  font-family: 'ttt';  /* Give your font a name */
+  src: url('fonts/ttt.ttf') format('truetype'); /* Path to the font file */
 }
     h2 {
       font-size: 6.2rem;
        margin-bottom:110px;
-      font-family: 'Sauce', sans-serif; /* Apply the font */
+      font-family: 'ttt', sans-serif; /* Apply the font */
     }
     
     h6 {
