--- a/entrees.html
+++ b/entrees.html
@@ -477,12 +477,12 @@
       
       <div class="recipe-card">
         <div class="ingredients">
-          <h3>Ingredients</h3>
+          <h3>INGREDIENTS</h3>
           <ul>
-            <li>Mozzarella cheese</li>
-            <li>Marinara sauce</li>
-            <li>Chicken cutlet</li>
-            <li>Reggiano parmigiano</li>
+            <li>PASTA</li>
+            <li>MARINARA SAUCE</li>
+            <li>CHICKEN CUTLET</li>
+            <li>REGGIANO PARMIGIANO</li>
           </ul>
         </div>
          <img src="./images3/entree3.png" alt="Pizza Recipe" class="recipe-image">
