--- a/entrees.html
+++ b/entrees.html
@@ -179,7 +179,8 @@
     .ingredients li {
   margin-bottom: 8px;
   list-style-type: none;
-  padding-left: 0; /* Remove the left padding */
+  padding-left: 0; /* Remove any remaining left padding */
+  text-align: center; /* Center each list item's text */
 }
     
     .instructions {
