--- a/entrees.html
+++ b/entrees.html
@@ -169,7 +169,7 @@
       border-radius: 10px;
       margin: 20px auto;
       max-width: 600px;
-      text-align: left;
+      text-align: center;
     }
     
     .ingredients ul {
